# zed

./: Cargo.toml
crates/collab_ui/: Cargo.toml
crates/collab_ui/src/: collab_ui.rs  notification_panel.rs  todo_panel.rs
crates/docker_panel/: Cargo.toml
crates/docker_panel/src/: docker_panel.rs
crates/recent_projects/src/: remote_servers.rs
crates/zed/: Cargo.toml
crates/zed/src/: zed.rs
