[package]
name = "docker_panel"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lib]
path = "src/docker_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
gpui.workspace = true
log.workspace = true
settings.workspace = true
smol.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
